feat: 채팅 메시지 응답 dto 변경